[gd_scene load_steps=2 format=3 uid="uid://ehjw00nb4qx"]

[ext_resource type="Script" path="res://Scripts/Grid/concept_ui.gd" id="1_pss36"]

[node name="ConceptUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pss36")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(1300, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button_Spawn" type="Button" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(750, 80)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Black Box"

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(1000, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 3

[node name="ChestContainer" type="GridContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 6

[node name="VBoxContainer3" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="CurrScore" type="Label" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 34
text = "Name Plate: "

[node name="HBoxContainer3" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="CurrValue" type="Label" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 34
text = "Current Value of Grid: 0"

[node name="HBoxContainer4" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="CurrWeight" type="Label" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 34
text = "Current Weight of Grid: 0"

[node name="HBoxContainer5" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 260)
layout_mode = 2
size_flags_vertical = 3

[node name="Button_Spawn" type="Button" parent="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer5"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Send Man
Alrighta Man"

[connection signal="pressed" from="TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button_Spawn" to="." method="_on_button_spawn_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer5/Button_Spawn" to="." method="_on_packitup_button_pressed"]
